--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity">
 
+    <TextView
+            android:id="@+id/trackSubscription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/buttonPause" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     <Button
             android:text="@string/start"
             android:layout_width="wrap_content"
@@ -47,17 +55,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonPause"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             app:layout_constraintTop_toBottomOf="@+id/seekBar"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.498"/>
     <SeekBar
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:id="@+id/seekBar"
-            android:layout_marginTop="104dp"
+            android:layout_marginTop="84dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
