--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/trackTimer"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/seekBar" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonPause" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/buttonStart" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     <Button
             android:text="@string/start"
@@ -22,8 +30,8 @@
             android:id="@+id/buttonStart"
             app:layout_constraintStart_toEndOf="@+id/buttonPreview" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toStartOf="@+id/buttonNext" android:layout_marginEnd="8dp"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/buttonPause"
-            app:layout_constraintHorizontal_bias="0.523"/>
+            app:layout_constraintHorizontal_bias="0.559" android:layout_marginTop="240dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <Button
             android:text="@string/preview"
             android:layout_width="wrap_content"
@@ -50,18 +58,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.498"/>
-    <Button
-            android:text="@string/pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonPause"
-            android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/seekBar"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.498"/>
     <SeekBar
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -78,8 +74,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.499">
-    </FrameLayout>
+            app:layout_constraintVertical_bias="0.499"/>
     <FrameLayout
             android:id="@+id/rightFrame"
             android:layout_width="205dp"
