--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,19 +70,17 @@
     <FrameLayout
             android:id="@+id/leftFrame"
             android:layout_width="205dp"
-            android:layout_height="match_parent"
+            android:layout_height="470dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.499"/>
+    />
     <FrameLayout
             android:id="@+id/rightFrame"
             android:layout_width="205dp"
-            android:layout_height="match_parent"
+            android:layout_height="470dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/leftFrame"
-            app:layout_constraintHorizontal_bias="1.0">
+            app:layout_constraintHorizontal_bias="0.0">
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
